| Bug #11522 | QC: queries with subqueries in the FROM clause are not cached by query cache | ||
|---|---|---|---|
| Submitted: | 23 Jun 2005 9:01 | Modified: | 25 Jul 2005 22:21 |
| Reporter: | Oleksandr Byelkin | ||
| Status: | Closed | ||
| Category: | Server | Severity: | S3 (Non-critical) |
| Version: | 4.1 | OS: | Any (all) |
| Assigned to: | Oleksandr Byelkin | Target Version: | |
[23 Jun 2005 9:01]
Oleksandr Byelkin
[23 Jun 2005 16:44]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/internals/26373
[4 Jul 2005 8:42]
Oleksandr Byelkin
pushed to 4.1.13
[25 Jul 2005 22:21]
Mike Hillyer
Documented in 4.1.13 changelog: <listitem><para>Queries with subqueries in the <literal>FROM</literal> clause were not being added to the query cache. (Bug #11522)</para></listitem>
